# sif

./: .gitignore  Cargo.toml  README.md  grammar
sifc_driver/: Cargo.toml
sifc_driver/src/: benchmark.rs  embed.rs  sif.rs  timings.rs
sifc_tests/: Cargo.toml  README.md
sifc_tests/tests/: lib.rs
sifc_tests/tests/analysis/: mod.rs  ssa.rs
sifc_tests/tests/compiler/: mod.rs
sifc_tests/tests/compiler/inputs/: array_mut.sif  basic_if.sif  basic_if_else.sif  bin_op.sif  complex_if.sif  empty_fn.sif  fn_call.sif  fn_decl_for_stmt.sif  fn_decl_if.sif  fn_decl_if_elif.sif  fn_decl_if_elif_else.sif  fn_decl_if_else.sif  fn_w_params.sif  for_stmt.sif  for_stmt_fn_call.sif  if_elif.sif  if_elif_else.sif  lneg_op.sif  multi_var.sif  nested_if.sif  nneg_op.sif  single_var.sif  std_lib_call.sif
sifc_tests/tests/exec_fail/: mod.rs
sifc_tests/tests/exec_fail/inputs/: array_index_bounds.sif  binop_num_bool.sif  binop_str_bool.sif  binop_str_num.sif  invalid_binarg.sif  invalid_var_access.sif  null_access.sif
sifc_tests/tests/exec_pass/: mod.rs
sifc_tests/tests/exec_pass/inputs/: array_decl.sif  fn_call.sif  fn_w_ret_stmt.sif  for_stmt_fn_call.sif  if_stmt.sif  scopes.sif  std_lib_calls.sif  var_decl.sif
sifc_tests/tests/inputs/: for_stmt.sif  std_lib_calls.sif  table_decl.sif
sifc_tests/tests/parse_fail/: mod.rs
sifc_tests/tests/parse_fail/inputs/: assign_decl.sif  fn_call_wrong_params.sif  fn_decl_eof.sif  fn_decl_invalid.sif  fn_decl_no_ident.sif  fn_decl_unclosed_paren.sif  undecl_fn.sif  (+7 more)
sifc_tests/tests/parse_pass/: mod.rs
sifc_tests/tests/vm/: mod.rs
(+138 files in other folders)
