[package]
name = "sifc_driver"
version = "0.1.0"
edition = "2018"
license = "MIT"

[dependencies]
clap = "4.5.2"
sifc_err = { path = "../sifc_err" }
sifc_parse = { path = "../sifc_parse" }
sifc_bytecode = { path = "../sifc_bytecode" }
sifc_vm = { path = "../sifc_vm" }
sifc_analysis = { path = "../sifc_analysis" }

[[bin]]
name = "sif"
path = "./src/sif.rs"