[package]
name = "sifc_tests"
version = "0.1.0"
edition = "2018"

[dependencies]
sifc_bytecode = { path = "../sifc_bytecode" }
sifc_err = { path = "../sifc_err" }
sifc_parse = { path = "../sifc_parse" }
sifc_vm = { path = "../sifc_vm" }

[[test]]
name = "integration_tests"
path = "tests/lib.rs"
harness = true
